[package]
name = "qubl-rs"
version = "1.0.0"
edition = "2021"
authors = ["Necdet Arda Etiman"]
license = "MIT"
readme = "README.md"
repository = "https://github.com/Necoo33/qubl-rs"
categories = ["database-implementations", "development-tools"]
keywords = ["sql-query", "query-builder", "sql-queries", "build", "sql"]
description = "Low level And flexible query builder that gives you full control of your queries."

[lib]
name = "qubl"

[dependencies]